# erdos-experiments

./: .gitignore  README.md  download_data.sh  requirements.txt
experiments/scenario_runner/: run_dynamic_deadlines_person_behind_car.sh  run_dynamic_deadlines_traffic_jam.sh  run_static_deadlines_person_behind_car.sh  run_static_deadlines_traffic_jam.sh
plotting_scripts/: box_and_whisker.py  generate_collision_stats.py  generate_plots.sh  plot_apollo_rosbag_analysis.py  plot_broadcast_latency.py  plot_challenge_collisions_barchart.py  plot_challenge_deadline_paper.py  plot_challenge_e2e_response_time.py  plot_challenge_policy.py  plot_edet_heatmap.py  plot_mode_changes.py  plot_msg_size_latency.py  plot_prediction_runtimes.py  plot_pylot_graphs.py  plot_scenario_collision_heatmap.py  plot_scenario_response_time_timeline.py  plot_synthetic_pipeline.py  plot_tracker_runtime_vs_num_targets.py  pylot_color_utils.py  pylot_utils.py  systems_utils.py  utils.py
systems-experiments/: README.md
systems-experiments/erdos-experiments/: Cargo.toml  README.md
systems-experiments/erdos-experiments/scripts/: broadcast_latency_inter_process.sh  broadcast_latency_intra_process.sh  msg_size_latency_inter_process.sh  msg_size_latency_intra_process.sh  run_all.sh  synthetic_pipeline_inter_process.sh  synthetic_pipeline_intra_process.sh
systems-experiments/erdos-experiments/src/: lib.rs  messages.rs
systems-experiments/erdos-experiments/src/operators/: binary_source.rs  csv_sink.rs  join.rs  mod.rs
systems-experiments/flink-experiments/: .gitignore  .project  README.md  docker-compose.yaml  pom.xml
systems-experiments/flink-experiments/scripts/: broadcast_latency_inter_process.sh  broadcast_latency_intra_process.sh  msg_size_latency_inter_process.sh  msg_size_latency_intra_process.sh  run_all.sh  run_broadcast_experiment.sh  run_synthetic_pipeline_experiment.sh  synthetic_pipeline_inter_process.sh  synthetic_pipeline_intra_process.sh
systems-experiments/flink-experiments/src/main/java/flink_experiments/: BroadcastExperiment.java  SyntheticPipeline.java
systems-experiments/flink-experiments/src/main/java/flink_experiments/messages/: BinaryData.java  LatencySample.java
systems-experiments/flink-experiments/src/main/java/flink_experiments/operators/: BinarySource.java  CSVSink.java
systems-experiments/flink-experiments/src/test/java/flink_experiments/: AppTest.java
systems-experiments/ros-experiments/: README.md
systems-experiments/ros-experiments/.devcontainer/: Dockerfile  devcontainer.json
systems-experiments/ros-experiments/scripts/: broadcast_latency.sh  broadcast_latency_docker.sh  msg_size_latency.sh  msg_size_latency_docker.sh  run_all.sh  setup_container.sh  synthetic_pipeline.sh  synthetic_pipeline_docker.sh
systems-experiments/ros-experiments/src/latency/: CMakeLists.txt  package.xml
systems-experiments/ros-experiments/src/latency/msg/: BinaryData.msg  LatencySample.msg
systems-experiments/ros-experiments/src/latency/src/: binary_source.cpp  csv_sink.cpp  join_three.cpp  join_two.cpp  map.cpp  receiver.cpp  utils.h
systems-experiments/ros2-experiments/: README.md  dds_config.xml
systems-experiments/ros2-experiments/.devcontainer/: Dockerfile  devcontainer.json
systems-experiments/ros2-experiments/latency/: CMakeLists.txt  package.xml
systems-experiments/ros2-experiments/latency/include/latency/: binary_source.hpp  csv_sink.hpp  join.hpp  map.hpp  receiver.hpp  utils.h
systems-experiments/ros2-experiments/latency/src/: binary_source.cpp  binary_source_driver.cpp  broadcast.cpp  csv_sink.cpp  csv_sink_driver.cpp  join.cpp  join_three_driver.cpp  join_two_driver.cpp  map.cpp  map_driver.cpp  receiver.cpp  receiver_driver.cpp  synthetic_pipeline.cpp
systems-experiments/ros2-experiments/scripts/: broadcast_latency_docker.sh  broadcast_latency_inter_process.sh  broadcast_latency_intra_process.sh  msg_size_latency_inter_process.sh  msg_size_latency_intra_process.sh  run_all_docker.sh  setup_container.sh  synthetic_pipeline_inter_process.sh  synthetic_pipeline_intra_process.sh
systems-experiments/scripts/: add_column_to_csv.py  install_dependencies.sh
